@@ -816,11 +816,10 @@ GEN     FpV_red(GEN z, GEN p);
 GEN     FpV_to_mod(GEN z, GEN p);
 GEN     FpVV_to_mod(GEN z, GEN p);
 GEN     FpX_to_mod(GEN z, GEN p);
-GEN     ZKM_gauss(GEN M, GEN P, long n, GEN *den);
-GEN     ZKM_ker_ratlift(GEN M, GEN P, long n);
-GEN     ZKM_indexrank(GEN M, GEN P, long n);
-GEN     ZKM_inv_ratlift(GEN M, GEN P, long n, GEN *pden);
-GEN     ZKM_pseudoinv(GEN M, GEN P, long n, GEN *den);
+GEN     ZabM_ker(GEN M, GEN P, long n);
+GEN     ZabM_indexrank(GEN M, GEN P, long n);
+GEN     ZabM_inv(GEN M, GEN P, long n, GEN *pden);
+GEN     ZabM_pseudoinv(GEN M, GEN P, long n, GEN *den);
 GEN     ZV_zMs_mul(GEN B, GEN M);
 GEN     ZpMs_ZpCs_solve(GEN M, GEN B, long nbrow, GEN p, long e);
 GEN     gen_FpM_Wiedemann(void *E, GEN (*f)(void*, GEN), GEN B, GEN p);
